SubBt/force-app/main/default/objects/Project_Scheduler_Task_Junction__c/Project_Scheduler_Task_Junction__c.object-meta.xml
<CustomObject>
    <label>Project Scheduler Task Junction</label>
    <nameField>
        <displayFormat>PST-{000000}</displayFormat>
        <label>Project Scheduler Task Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Scheduler Task Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>