SubBt/force-app/main/default/objects/Project_Scheduler_Task_Junction__c/fields/Project_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Project_Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Scheduler</label>
    <referenceTo>Project_Scheduler__c</referenceTo>
    <relationshipLabel>Project Scheduler Task Junction</relationshipLabel>
    <relationshipName>Project_Scheduler_Task_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>